--- a/newmodel/modelgen.ipynb
+++ b/newmodel/modelgen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4  Missing information on how to use it, but it is a great product for the price!  I  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,20 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "label\n",
        "OR       20358\n",
        "CG       20236\n",
        "label        1\n",
-       "Name: count, dtype: int64"
+       "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,19 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "target\n",
        "0    20359\n",
        "1    20236\n",
-       "Name: count, dtype: int64"
+       "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\shashank.shetty\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\shash\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +385,7 @@
        "4  [Missing, information, on, how, to, use, it, but, it, is, a, great, product, for, the, price, I]  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +414,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\shashank.shetty\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\shash\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -427,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +570,7 @@
        "4           [Missing, information, use, great, product, price, I]  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +750,7 @@
        "4               [miss, inform, use, great, product, price, i]  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +842,7 @@
        "4             miss inform use great product price i"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -947,126 +945,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.924304</td>\n",
-       "      <td>0.009017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CatBoostClassifier</td>\n",
-       "      <td>11.14</td>\n",
-       "      <td>0.922078</td>\n",
-       "      <td>0.010460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>LinearSVC</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.921062</td>\n",
-       "      <td>0.013086</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>RidgeClassifier</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.920814</td>\n",
-       "      <td>0.013822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LGBMClassifier</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.917614</td>\n",
-       "      <td>0.011333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>XGBClassifier</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.914757</td>\n",
-       "      <td>0.010398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>8.13</td>\n",
-       "      <td>0.912112</td>\n",
-       "      <td>0.015514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MultinomialNB</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.900591</td>\n",
-       "      <td>0.020190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>BaggingClassifier</td>\n",
-       "      <td>16.78</td>\n",
-       "      <td>0.857346</td>\n",
-       "      <td>0.011597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoostClassifier</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.842195</td>\n",
-       "      <td>0.021487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>BernoulliNB</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.827052</td>\n",
-       "      <td>0.021919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>1.19</td>\n",
-       "      <td>0.736338</td>\n",
-       "      <td>0.009431</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>KNeighborsClassifier</td>\n",
-       "      <td>1.33</td>\n",
-       "      <td>0.699702</td>\n",
-       "      <td>0.036905</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>ExtraTreeClassifier</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.667977</td>\n",
-       "      <td>0.016583</td>\n",
+       "      <td>8.58</td>\n",
+       "      <td>0.911289</td>\n",
+       "      <td>0.01614</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     model run_time   roc_auc  roc_auc_std\n",
-       "11           SGDClassifier     0.05  0.924304     0.009017\n",
-       "1       CatBoostClassifier    11.14  0.922078     0.010460\n",
-       "2                LinearSVC     0.06  0.921062     0.013086\n",
-       "10         RidgeClassifier     0.06  0.920814     0.013822\n",
-       "4           LGBMClassifier     0.28  0.917614     0.011333\n",
-       "0            XGBClassifier     0.49  0.914757     0.010398\n",
-       "5   RandomForestClassifier     8.13  0.912112     0.015514\n",
-       "3            MultinomialNB     0.05  0.900591     0.020190\n",
-       "12       BaggingClassifier    16.78  0.857346     0.011597\n",
-       "8       AdaBoostClassifier     0.66  0.842195     0.021487\n",
-       "13             BernoulliNB     0.08  0.827052     0.021919\n",
-       "6   DecisionTreeClassifier     1.19  0.736338     0.009431\n",
-       "9     KNeighborsClassifier     1.33  0.699702     0.036905\n",
-       "7      ExtraTreeClassifier     0.18  0.667977     0.016583"
+       "                    model run_time   roc_auc roc_auc_std\n",
+       "0  RandomForestClassifier     8.58  0.911289     0.01614"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,25 +971,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['SGDClassifier',\n",
-       " 'CatBoostClassifier',\n",
-       " 'LinearSVC',\n",
-       " 'RidgeClassifier',\n",
-       " 'LGBMClassifier',\n",
-       " 'XGBClassifier',\n",
-       " 'RandomForestClassifier',\n",
-       " 'MultinomialNB',\n",
-       " 'BaggingClassifier',\n",
-       " 'AdaBoostClassifier']"
+       "['RandomForestClassifier']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,8 +1009,7 @@
     "    pipeline = Pipeline([(\"tfidf\", TfidfVectorizer()), (\"clf\", classifiers[key])])\n",
     "    pipeline.fit(X_train, y_train)\n",
     "    model_name = f\"MODEL/{key}_model.pkl\"\n",
-    "    pickle.dump(pipeline, open(model_name,'wb'))\n",
-    "#y_pred = pipeline.predict(X_test)"
+    "    pickle.dump(pipeline, open(model_name,'wb'))"
    ]
   },
   {
@@ -1138,75 +1022,12 @@
      "output_type": "stream",
      "text": [
       "----------------------------\n",
-      "SGDClassifier\n",
-      "----------------------------\n",
-      "Accuracy: 0.8688726496428278\n",
-      "Precision: 0.8859289617486339\n",
-      "Recall: 0.8481281674023214\n",
-      "ROC/AUC: 0.868966756086512\n",
-      "----------------------------\n",
-      "CatBoostClassifier\n",
-      "----------------------------\n",
-      "Accuracy: 0.8629608342228426\n",
-      "Precision: 0.876056814338857\n",
-      "Recall: 0.8469838155958803\n",
-      "ROC/AUC: 0.8630333132746806\n",
-      "----------------------------\n",
-      "LinearSVC\n",
-      "----------------------------\n",
-      "Accuracy: 0.8747023565153133\n",
-      "Precision: 0.8737990555284155\n",
-      "Recall: 0.8772273990518228\n",
-      "ROC/AUC: 0.8746909017693953\n",
-      "----------------------------\n",
-      "RidgeClassifier\n",
-      "----------------------------\n",
-      "Accuracy: 0.8745381394203137\n",
-      "Precision: 0.8769508789222934\n",
-      "Recall: 0.8726499918260585\n",
-      "ROC/AUC: 0.8745467049199578\n",
-      "----------------------------\n",
-      "LGBMClassifier\n",
-      "----------------------------\n",
-      "Accuracy: 0.8560637162328598\n",
-      "Precision: 0.860899768441945\n",
-      "Recall: 0.8509073075036783\n",
-      "ROC/AUC: 0.8560871080573489\n",
-      "----------------------------\n",
-      "XGBClassifier\n",
-      "----------------------------\n",
-      "Accuracy: 0.8541752196403646\n",
-      "Precision: 0.8688190314358538\n",
-      "Recall: 0.8358672551904528\n",
-      "ROC/AUC: 0.8542582729268\n",
-      "----------------------------\n",
       "RandomForestClassifier\n",
       "----------------------------\n",
-      "Accuracy: 0.857623778635356\n",
-      "Precision: 0.8392940083604273\n",
-      "Recall: 0.8862187346738597\n",
-      "ROC/AUC: 0.8574940588578801\n",
-      "----------------------------\n",
-      "MultinomialNB\n",
-      "----------------------------\n",
-      "Accuracy: 0.8393956810904015\n",
-      "Precision: 0.8085421919027139\n",
-      "Recall: 0.8912865783880988\n",
-      "ROC/AUC: 0.8391602802860982\n",
-      "----------------------------\n",
-      "BaggingClassifier\n",
-      "----------------------------\n",
-      "Accuracy: 0.8057311766154857\n",
-      "Precision: 0.8122190777426336\n",
-      "Recall: 0.7976132090894229\n",
-      "ROC/AUC: 0.8057680034229694\n",
-      "----------------------------\n",
-      "AdaBoostClassifier\n",
-      "----------------------------\n",
-      "Accuracy: 0.7854503653830364\n",
-      "Precision: 0.7924874791318864\n",
-      "Recall: 0.7760340035965343\n",
-      "ROC/AUC: 0.7854930822997517\n"
+      "Accuracy: 0.8570490188028573\n",
+      "Precision: 0.8390145646110939\n",
+      "Recall: 0.8852378616969102\n",
+      "ROC/AUC: 0.856921141340042\n"
      ]
     }
    ],
@@ -1246,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
